Improve responsive UI: avoid an issue of the contacts list on mobile
On small-screen mobile devices, item will be more than one line if its
contact's name is too long. The reason is its invisible buttons (which
will be visible when hover) still take place in UI.

Because we don't need to show those buttons on mobile (mobile browsers
don't really support hover state), we won't display them on small
screens (which have viewport width < 500px).

--- a/scss/components/_contact-list.scss
+++ b/scss/components/_contact-list.scss
@@ -47,9 +47,9 @@
         &:hover {
             background-color: #e0e0e0;
 
-            .contact-item__buttons>div {
-                visibility: visible;
-            }
+            // .contact-item__buttons > div {
+            //     visibility: visible;
+            // }
 
             .contact-item__checkbox-label {
                 display: block;
@@ -122,7 +122,7 @@
 
     &__buttons {
         > div {
-            display: inline-block;
+            display: none;
             line-height: 3em;
             text-align: center;
             width: 3em;
@@ -180,8 +180,17 @@
     .page-title h1 {
         font-size: 2.5em;
     }
+
     .contact-list {
         width: 90%;
+    }
+
+    .contact-item__buttons > div {
+        display: inline-block;
+    }
+
+    .contact-list__item:hover .contact-item__buttons > div {
+        visibility: visible;
     }
 }
 
